--- a/src/DbSchemas.Service/appsettings.json
+++ b/src/DbSchemas.Service/appsettings.json
@@ -8,5 +8,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings:PostgreSql": "host=172.16.0.20;database=emr;username=jiangyi;password=ojh92g354;PersistSecurityInfo=true;"
+  "ConnectionStrings:PostgreSql": "host=127.0.0.1;database=postgres;username=postgres;password=postgres;PersistSecurityInfo=true;"
 }
